remove linkedin, fix slider spacing

--- a/src/css/contentscreen.css
+++ b/src/css/contentscreen.css
@@ -26,7 +26,7 @@
 .sliderContainer {
   width: 100%;
   height: 300px;
-  margin-top: -50px;
+  margin-bottom: -25px;
 }
 
 .slider {
